--- a/css/comment-style.css
+++ b/css/comment-style.css
@@ -84,3 +84,21 @@ h3.comment-author {
 	margin-left: 20px;
 	vertical-align: bottom;
 }
+
+#webmention-form {
+      display: inline;
+      font-size: 16px;
+}
+
+.comment-return {
+	margin-top: 30px;
+}
+
+.respond {
+	padding: 5px;
+
+}
+
+.respond li {
+   	list-style: none;
+}
